--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FormActivity">
-        <activity android:name=".MainActivitySecond"></activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".FormActivity" />
-        <activity android:name=".MainActivity2">
+        <activity android:name=".ui.MainActivity2"></activity>
+        <activity android:name=".ui.MainActivitySecond" />
+        <activity android:name=".ui.MainActivity" />
+        <activity android:name=".ui.FormActivity" />
+        <activity android:name=".ui.RecyclerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
